Add secure registration with username/PIN/PGP and buyer-vendor user areas
